kubernetes/apps/tracking/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-server
  namespace: tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden-server
  template:
    metadata:
      labels:
        app: vaultwarden-server
    spec:
      containers:
        - name: vaultwarden-server
          image: vaultwarden/server:latest
          ports: 
            - containerPort: 80
          volumeMounts:
            - name: tls
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: tracking-secret-tls
